# PLT-Ticket-to-Ride-2025-2026

./: .env  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake  compile_commands.json  compile_log_latest.txt  docker-compose.yml  run_test.sh  setup_docker.sh
.devcontainer/: devcontainer.json
.github/workflows/: ff-merge.yml  main.yml
docs/: tui_gameview_mock.txt  tui_navigation.md
rapport/: report_ai.md  report_engine.md  report_tui.md  report_v1.final.md  report_v2.1.md
ressources/: StateMachine.dia  destination_cards_list_europe.txt  europe_layout.txt
src/: StateMap.dia  cardState.dia  cardsState.dia  client.dia  engine.dia  graph.dia  mapState.dia  mapState_old.dia  parser.dia  playerState.dia  playersState.dia  render.dia  state.dia  tui.dia
src/client/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/client/client/: Client.cpp
src/graph/: CMakeLists.txt  graph.dia  graphstations.cpp  state.dia  statemachine.dia
src/shared/: CMakeLists.txt  Makefile  cmake_install.cmake
src/shared/graph/: CMakeLists.txt  Map.cpp  Player.h  graphstations.cpp  graphtest.cpp  main.cpp  temp_state.dia
src/shared/state/: CMakeLists.txt  Card.cpp  CardState.cpp  Deck.cpp  DeckInvisible.cpp  DeckVisible.cpp  DestinationCard.cpp  LcgGenerator.hpp  State.cpp  Trash.cpp  main.cpp  state.cpp
static/: dummy_state.json  europe_card.json  europe_map.json  europe_player.json  europe_state.json  europe_state_1.json  europe_state_1_manycards.json  europe_state_2.json  init_state_6players.json  state_template.json  unreachable_state.json
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
test/client/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_Client.cpp  test_client_dummy  test_client_dummy.cpp
test/shared/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_shared.cpp  test_shared_dummy  test_shared_dummy.cpp
test/shared/graph/: CMakeLists.txt  test_Map.cpp
(+140 files in other folders)
